fix bug with yaml for contact page, replace background on marquee, add small spacing for phone numbers in mobile view

--- a/html/_scss/components/_contact.scss
+++ b/html/_scss/components/_contact.scss
@@ -63,6 +63,7 @@
     font-size: 32px;
     font-weight: 500;
     margin: 0px;
+    margin-bottom: 20px;
   }
   &__phone--byline {
     font-size: 20px;
